# funnykitties

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  notes.txt  server
.github/workflows/: ci.yml
cmd/: CMakeLists.txt  main.cpp
docs/: uml  uml_level_control
levels/: cat.tsx  demo_map.tmx  free.json  map.json  map2.json  minimal_industry.json  minimal_industry.tsx  minimal_night.tsx  tileset.json  tileset.tsx
levels/level_1/: map.json  tileset.json
levels/level_2/: map.json  tileset.json
levels/level_3/: map.json  tileset3.json
levels/level_demo(nikita)/: map.json  tileset.json  tileset3.json
menu/: CMakeLists.txt  menu.cpp  menu.h
network/: CMakeLists.txt
network/src/Client/: Client.cpp  Client.h  ClientInterface.h
network/src/Connection/: Connection.cpp  Connection.h
network/src/Server/: Server.cpp  Server.h  ServerInterface.h
network/src/Server/Tsqueue/: Tsqueue.cpp
network/src/Tsqueue/: Tsqueue.h
network/src/Types/: Types.h
network/test/: main.cpp  test_server.cpp
src/: CMakeLists.txt  dir.cpp
src/LevelController/: LevelController.cpp  LevelController.h
src/LevelManager/: LevelManager.h
src/animation_controller/: CMakeLists.txt  animationcontroller.cpp  animationcontroller.h
src/button/: button.h
src/buttons/: CMakeLists.txt  button.cpp  button.h
src/gamecontroller/: CMakeLists.txt  gamecontroller.cpp  gamecontroller.h
src/gameobject/: CMakeLists.txt  gameobject.cpp  gameobject.h
src/gui/: CMakeLists.txt
src/item/: CMakeLists.txt  item.cpp  item.h
tests/: CMakeLists.txt
(+30 files in other folders)
